--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,6 +29,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       CI: true
+      REACT_APP_API_ORIGIN: https://tessa-backend-api.commit.community
     steps:
       - uses: actions/checkout@v2
       - name: Build Static Site
