#19 Add scripts for fixing lint and put eslint in the PR workflow

--- a/package.json
+++ b/package.json
@@ -25,6 +25,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --passWithNoTests",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
+    "format": "prettier --check .",
+    "format:fix": "prettier --write .",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
