--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -27,4 +27,16 @@ jobs:
         with:
           cache: npm
       - run: npm ci
-      - run: npx prettier --check .
+      - run: npm run format
+
+  check-lint:
+    runs-on: ubuntu-latest
+    env:
+      CI: true
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          cache: npm
+      - run: npm ci
+      - run: npm run lint
